cmd/tools/vvet/tests/parens_space_a.out
cmd/tools/vvet/tests/parens_space_a.vv:1: error: Looks like you are adding a space after `(`
Note: You can run `v fmt -w file.v` to fix these errors automatically
