cmd/tools/vvet/tests/parens_space_a.vv
fn main() {
	_ = 1 + ( 1 + 2)
}

